# dex_forge

./: .gitignore  README.md  package.xml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
config/scenarios/: default_scenarios.json
data_schema/: clip_manifest.schema.json  event.schema.json  session_manifest.schema.json
dex_forge/: __init__.py  dummy_pose_publisher.py  main.py
dex_forge/backend/: __init__.py  api.py  instruction_generator.py  models.py  ros_node.py  scenario_library.py  service.py  storage.py  writer.py
resource/: dex_forge
scripts/: build.sh  run_server.sh  setup.sh
tests/: conftest.py  test_api.py  test_collection_service.py  test_dummy_pose_publisher.py  test_dummy_pose_shape.py  test_instruction_generator.py  test_main.py  test_repo_scripts.py  test_scenario_library.py
web/: index.html  package-lock.json  package.json  vite.config.js
web/src/: App.jsx  App.test.jsx  ThreeHandViewer.jsx  api.js  api.test.js  handView.js  handView.test.js  main.jsx  styles.css
web/src/test/: setup.js
