<?xml version="1.0"?>
<package format="3">
  <name>dex_forge</name>
  <version>0.1.0</version>
  <description>DexForge operator-driven hand motion data collection service and web UI.</description>
  <maintainer email="shkwon98@snu.ac.kr">Sunghyun Kwon</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>ament_index_python</exec_depend>
  <depend>geometry_msgs</depend>
  <depend>rclpy</depend>
  <depend>rosbag2_py</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
